yaml/dummy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: dummy-server
 namespace: fs
spec:
 selector:
  matchLabels:
   app: dummy-app
 replicas: 1
 template:
  metadata:
   labels:
    app: dummy-app
  spec:
   containers:
   - name: dummy-server
     image: 10.178.0.4:5000/dummy-server:1.0
     imagePullPolicy: IfNotPresent
     ports:
     - containerPort: 3001
---

apiVersion: v1
kind: Service
metadata:
  name: dummy-server
  namespace: fs
spec:
  selector:
    app: dummy-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3001
